--- a/jsapi/krn/package.json
+++ b/jsapi/krn/package.json
@@ -27,7 +27,7 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
-    "docs": "npx typedoc --plugin typedoc-plugin-markdown --out ./docs ./src",
+    "docs": "rm -rf ./docs/gen/ && npx typedoc --plugin typedoc-plugin-markdown --theme markdown --hideBreadcrumbs --hideSources --out ./docs/gen/ ./src/index.ts && cp ../template.md ./docs/gen/ && npx template-file docs/config.json docs/gen/template.md docs/gen/ && cat docs/gen/modules/_src_index_.md >> docs/gen/template.md",
     "bootstrap": "yarn example && yarn && yarn pods"
   },
   "keywords": [
@@ -138,5 +138,8 @@
     "targets": [
       "typescript"
     ]
+  },
+  "dependencies": {
+    "template-file": "^3.1.0"
   }
 }
