--- a/jsapi/kwaiying/package.json
+++ b/jsapi/kwaiying/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@krn/kwaiying",
-  "version": "0.1.0",
-  "description": "kwaiying api",
+  "version": "0.1.4",
+  "description": "kwaiying native api",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/src/index.d.ts",
@@ -27,15 +27,14 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods"
+    "docs": "rm -rf ./docs/gen/ && npx typedoc --plugin typedoc-plugin-markdown --theme markdown --hideBreadcrumbs --hideSources --out ./docs/gen/ ./src/index.ts && cp ../template.md ./docs/gen/ && npx template-file docs/config.json docs/gen/template.md docs/gen/ && cat docs/gen/modules/_src_index_.md >> docs/gen/template.md",    "bootstrap": "yarn example && yarn && yarn pods"
   },
   "keywords": [
     "react-native",
     "ios",
     "android"
   ],
-  "repository": "http://",
-  "author": "liubojie <liubojie@kuaishou.com> (http://)",
+  "author": "krn <liubojie@kuaishou.com> (http://)",
   "license": "MIT",
   "bugs": {
     "url": "http:///issues"
@@ -60,6 +59,9 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "release-it": "^13.5.8",
+    "template-file": "^3.1.0",
+    "typedoc": "^0.18.0",
+    "typedoc-plugin-markdown": "^2.4.0",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
@@ -119,7 +121,10 @@
       ]
     }
   },
-  "eslintIgnore": ["node_modules/", "lib/"],
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
   "prettier": {
     "quoteProps": "consistent",
     "singleQuote": true,
@@ -130,6 +135,8 @@
   "@react-native-community/bob": {
     "source": "src",
     "output": "lib",
-    "targets": ["commonjs", "module", "typescript"]
+    "targets": [
+      "typescript"
+    ]
   }
 }
